--------- Market Version 69 (2.20) --------------
 * Fix stuck notes bug in arpeggiator

--------- Market Version 68 (2.19) --------------
 * Now with four note auto-chords
 * Forward/Reverse/PingPong Arpeggio

--------- Market Version 66 (2.17) --------------
 * Accellerometer controlled pitch bend in JAM

--------- Market Version 64 (2.14) --------------
 * Added a Custom Scale to JAM, called CS1, and an editor.

--------- Market Version 63 (2.13) --------------
 * Fix bug in JAM, Copy to loop function

--------- Market Version 62 (2.12) --------------
 * for vuKNOBnet - added permission for wifi wake lock.

--------- Market Version 61 (2.11) --------------
 * for vuKNOBnet - detect if vuKNOB is already playing when connecting.
 * Keep screen always on
 * Warn user of vuKNOBnet if there is no server found
 * Bugfixes

--------- Market Version 60 (2.10) --------------
 * for vuKNOB - support for Samsung Professional Audio, giving much improved latency on certain Samsung devices.

--------- Market Version 59 (2.09) --------------
 * for vuKNOB - better snap-to in the piano roll editor.
 * for vuKNOB - fix bug when zooming

--------- Market Version 58 (2.08) --------------
 * for vuKNOBnet - skip to JAM on start up

--------- Market Version 57 (2.07) --------------
 * Fix bugs for JAM

--------- Market Version 56 (2.06) --------------
 * New arpeggio pattern
 * Support for remote control of vuKNOB via the companion app vuKNOBnet

--------- Market Version 55 (2.05) --------------
 * Fixed race condition error

--------- Market Version 54 (2.04) --------------
 * Fixed bugs related to project loading

--------- Market Version 53 (2.03) --------------
 * Another bugfix release

--------- Market Version 52 (2.02) --------------
 * Bug fixes (forgot to load libpathvariable.so)

--------- Market Version 51 (2.01) --------------
 * New logo
 * Bug fixes

--------- Market Version 50 (2.0) --------------
 * New connector interface