@@ -3,9 +3,13 @@
 <input premix="true" dimension="0" channels="2">Stereo</input>
 <output dimension="0" channels="2">Stereo</output>
 
-<controller name="comp" type="float" min="-1.0" max="0.0" step="0.1" />
+<controller name="comp" type="float" min="-20.0" max="0.0" step="0.1" />
+<controller name="width" type="float" min="0.0" max="1.0" step="0.1" />
+<controller name="ratio" type="float" min="0.01" max="5.0" step="0.01" />
+<controller name="attack" type="float" min="0.01" max="7.0" step="0.001" />
+<controller name="decay" type="float" min="0.01" max="7.0" step="0.001" />
+<controller name="input_gain" type="float" min="-36.0" max="36.0" step="0.1" />
+<controller name="output_gain" type="float" min="-36.0" max="36.0" step="0.1" />
 <controller name="dry" type="float" min="0.0" max="1.0" step="0.1" />
-
-<controller name="decay" type="float" min="0.01" max="5.0" step="0.001" />
 
 </machine>
