@@ -1,3 +1,6 @@
+--------- Market Version 70 (2.21) --------------
+ * Comprezza has been highly improved
+
 --------- Market Version 69 (2.20) --------------
  * Fix stuck notes bug in arpeggiator
 
